linux: bring our process group to the foreground (#89653)

Required to make the driver receive keyboard events from the console.

X.Org Bug  <http://bugs.freedesktop.org/show_bug.cgi?id=89653>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>
Reviewed-by: Hans de Goede <hdegoede@redhat.com>
Tested-by: Ingo Brückl <ib@wupperonline.de>